methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:34: error: Unit does not take parameters
  V()
   ^