methods.picture.PictureMono1.scala.code
def V{
  gauche()
  avance()
  brushDown()
  brushUp()
  droite()
  droite()
  avance()
  
  gauche()
  avance()
  brushDown()
  brushUp()
  droite()
  droite()
  avance()
  
  gauche()
  avance()
  brushDown()
  brushUp()
  droite()
  droite()
  avance()
  
  gauche()
}

for (i <- 1 to 4){
  avance();
  avance();
  avance();
  gauche();
  V()
  droite();
  avance();
  avance();
  avance();
  gauche(); 
}